--- a/src/main/webapp/pages/listado-espectaculos.css
+++ b/src/main/webapp/pages/listado-espectaculos.css
@@ -10,6 +10,10 @@
     border-bottom: 1px solid #ddd;
 }
 
+select{
+    width: 100px;
+}
+
 .busqueda{
     display: flex;
     flex-direction: column;
