--- a/src/main/webapp/pages/detalles.css
+++ b/src/main/webapp/pages/detalles.css
@@ -1,6 +1,6 @@
 .grid-container{
     display: grid;
-    grid-template-columns: 10px 120px 150px 160px 3px 550px;
+    grid-template-columns: 10px 140px 130px 190px 3px 550px;
     grid-template-rows: 80px 80px 50px 360px 20px;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -19,6 +19,8 @@
     grid-column: 2/5;
     grid-row: 4;
     border: solid black 1px;
+    margin-top: 5px;
+    text-align: center;
     border-collapse: collapse;
 }
 
@@ -39,18 +41,18 @@
 }
 
 
-.menu {
-    display: flex;
-    justify-content: space-around;
-    border-bottom: solid black 1px;
-}
+
 
 .menu p {
     //margin-right: 2rem;
     cursor: pointer;
 
 }
-
+.menu {
+    display: flex;
+    justify-content: space-around;
+    border-bottom: solid black 1px;
+}
 [data-target]{
     background-color: white;
 }
@@ -66,7 +68,8 @@
 }
 .content {
     margin-top: 1rem;
-
+    text-align: left;
+    margin-right: 3rem;
 }
 
 [data-content] {
@@ -103,4 +106,32 @@
     display: inline-block;
     margin-top: 31px;
     padding: 1px 1px;
+    //border-radius: 3px;
+}
+
+.btn2{
+    display: inline-block;
+    margin-top: 31px;
+    margin-bottom: 1px;
+    margin-right: 10px;
+    padding: 1px 1px;
+    grid-column: 3;
+    grid-row: 3;
+    //border-radius: 3px;
+}
+
+.form{
+    grid-column: 3;
+    grid-row: 3;
+}
+
+.sticker{
+    display: inline-block;
+    border-radius: 3px;
+    background-color: gray;
+}
+
+.respuesta{
+    grid-column: 3;
+    grid-row: 3;
 }
