--- a/src/main/webapp/pages/login.css
+++ b/src/main/webapp/pages/login.css
@@ -25,21 +25,27 @@
   background-color: rgba(245, 245, 245, 0.8);
 }
 
-#error_message {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 20%;
-  height: 10%;
-  background-color: rgba(131, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 1.5rem;
-  text-align: center;
-  margin: 10px;
+#message {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20%;
+    height: 10%;
+    background-color: rgba(0, 131, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 1.5rem;
+    text-align: center;
+    margin: 10px;
 }
+
+#message .error {
+    background-color: rgba(255, 0, 0, 0.5);
+}
+
+
 
 .container {
   display: flex;
