--- a/src/main/webapp/pages/global.css
+++ b/src/main/webapp/pages/global.css
@@ -154,6 +154,11 @@ section {
     background-color: #c2c2c2;
 }
 
+#submitBtn:disabled, #submitBtn:disabled:hover {
+    background-color: #c2c2c2;
+    cursor: not-allowed;
+}
+
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
