--- a/src/main/webapp/pages/usuario/login.css
+++ b/src/main/webapp/pages/usuario/login.css
@@ -1,21 +1,9 @@
 * {
   margin: 0
 }
-.login-container {
-  display: flex;
-  height: 100vh;
-  flex-direction: column;
-}
-
-.login-container > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  z-index: -1;
-}
 
 .container {
+  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
