--- a/src/main/webapp/pages/global.css
+++ b/src/main/webapp/pages/global.css
@@ -25,19 +25,13 @@ body {
     flex-direction: column;
     margin: 0;
     height: 100vh;
-}
-
-.background_img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    z-index: -1;
+    background: url("https://i.imgur.com/d6cWesT.jpeg");
 }
 
 .background_container {
+    overflow: auto;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -67,7 +61,7 @@ body {
     background-color: rgba(0, 131, 0, 0.5);
 }
 
-main.coronaTicketsUY {
+.coronaTicketsUY {
     display: flex;
     flex-direction: column;
     margin-bottom: 0;
@@ -76,29 +70,6 @@ main.coronaTicketsUY {
     position: relative;
     text-align: left;
     width: 1060px;
-}
-
-.page-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-    background-color: var(--primary-blue);
-}
-.page-title > h3 {
-    margin: 0 10px;
-    font-size: 20px;
-    color: var(--almost-white);
-    padding: 5px 10px;
-}
-
-section {
-    display: flex;
-    width: 100%;
-    padding: 10px 0;
-
-    border-left: 1px solid var(--light-grey);
-    border-right: 1px solid var(--light-grey);
 }
 
 .header {
@@ -283,19 +254,48 @@ section {
     object-fit: contain;
 }
 
-.sidebar {
-    width: 25%;
+.page-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     height: 100%;
+    background-color: var(--primary-blue);
+}
+.page-title > h3 {
+    margin: 0 10px;
+    font-size: 20px;
+    color: var(--almost-white);
+    padding: 5px 10px;
+}
+
+section {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+    padding: 10px 0;
+    border-left: 1px solid var(--light-grey);
+    border-right: 1px solid var(--light-grey);
+}
+
+.sidebars {
     display: flex;
     flex-direction: column;
-    background-color: var(--light-grey);
-    margin: 10px;
-    padding: 10px;
+    width: 25%;
+    height: 100%;
+    padding: 10px 0;
+}
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px;
 }
 
 .sidebar__item {
     display: flex;
     flex-direction: column;
+    background-color: var(--light-grey);
+    padding: 10px;
     margin-bottom: 10px;
 }
 .sidebar__item > h4 {
@@ -315,6 +315,9 @@ section {
     font-weight: 400;
     color: var(--primary-black);
     cursor: pointer;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .sidebar__item > ul > li:hover {
     color: var(--primary-blue);
@@ -331,12 +334,11 @@ section {
     display: flex;
     flex-direction: column;
     border-right: 1px solid var(--light-grey);
-    padding: 0 10px;
+    padding: 5px 10px;
 }
 
 .content-area {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -350,8 +352,9 @@ section {
 }
 
 .content-area-header > h2 {
-    font-size: 30px;
-    font-weight: 400;
+    font-size: 15px;
+    font-weight: bold;
+    color: var(--primary-black);
 }
 
 .content-area-header > span {
@@ -359,10 +362,6 @@ section {
     font-weight: 400;
 }
 
-.content-area-header > h2 > a {
-    color: var(--primary-black);
-    text-decoration: none;
-}
 .content-area-header > span > a {
      color: var(--link);
      text-decoration: none;
@@ -371,6 +370,37 @@ section {
 .content-area-header > * > a:hover {
     color: var(--primary-blue);
     text-decoration: underline;
+}
+.content-area-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+.content-area-content-item {
+    display: flex;
+    flex-direction: column;
+    height: 320px;
+}
+.content-area-content-item:hover {
+    opacity: 0.6;
+    cursor: pointer;
+}
+.content-area-content-item-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+}
+.content-area-content-item-img > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.content-area-content-item-name > h3 {
+    margin: 0;
+    font-size: 20px;
+    font-weight: 400;
+    color: var(--primary-black);
 }
 
 .loader {
@@ -426,5 +456,18 @@ section {
 @media screen and (max-height: 610px) {
     * {
         font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .sidebars {
+        display: none;
+    }
+    .main-container {
+        width: 100%;
+        padding: 0 20px
+    }
+    .coronaTicketsUY {
+        width: 768px
     }
 }
