Se termina el diseño en las pantallas de listado; se completa su validacion para los usuarios logueados

--- a/src/main/webapp/pages/global.css
+++ b/src/main/webapp/pages/global.css
@@ -41,7 +41,8 @@ body {
 #message {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 50%;
+    transform: translateX(-50%);
     width: 20%;
     height: 10%;
     background-color: rgba(245, 245, 245, 0.8);
@@ -52,6 +53,8 @@ body {
     font-size: 1.5rem;
     text-align: center;
     margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
 #message.error {
