Se termina de arreglar diseño de las pantallas de altas

--- a/src/main/webapp/pages/global.css
+++ b/src/main/webapp/pages/global.css
@@ -55,6 +55,7 @@ body {
     margin: 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    z-index: 10;
 }
 
 #message.error {
@@ -135,6 +136,7 @@ body {
     overflow: hidden;
     transition: max-height 0.3s ease-in-out;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+    z-index: 20;
 }
 .header__right__submenu_wrap.open-menu {
     max-height: 100%;
