--- a/src/main/webapp/pages/funcion/listado-funciones.css
+++ b/src/main/webapp/pages/funcion/listado-funciones.css
@@ -19,7 +19,6 @@ select{
     flex-direction: column;
     text-align: start;
     padding: 10px;
-    margin-top: 5px;
     gap: 10px;
 }
 
@@ -31,4 +30,36 @@ select{
 
 tbody td:hover {
     cursor: pointer;
+}
+
+tbody tr:hover {
+    background-color: #ddd;
+}
+
+
+#txtBuscar {
+    padding: 10px;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 2px solid #ddd;
+}
+
+select {
+    width: 100%;
+    margin-top: 5px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+}
+
+button {
+    width: 100%;
+    padding: 10px 20px;
+    background-color: var(--primary-blue);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 5px;
 }
