--- a/src/main/webapp/pages/paquete/listado-paquetes.css
+++ b/src/main/webapp/pages/paquete/listado-paquetes.css
@@ -6,6 +6,14 @@
     margin-bottom: 200px;
 }
 
+.busqueda{
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    padding: 10px;
+    gap: 10px;
+}
+
 .tablaPaquetes td, .tablaPaquetes th, h2{
     padding: 8px;
     align-items: start;
@@ -18,5 +26,14 @@ tbody td:hover {
     cursor: pointer;
 }
 
+tbody tr:hover {
+    background-color: #ddd;
+}
 
 
+#txtBuscar {
+    padding: 10px;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 2px solid #ddd;
+}
